AY1920_II_HW_05_PROJ_1.cydsn/REBUILD.log
--------------- Rebuild Started: 04/23/2020 12:13:32 Project: AY1920_II_HW_05_PROJ_1, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Interface.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_Debug.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_Debug_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_Debug_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_Debug_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SDA_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SCL_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master_SLAVE.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_Master_MASTER.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_Debug_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\AY1920_II_HW_05_PROJ_1.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\AY1920_II_HW_05_PROJ_1.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\AY1920_II_HW_05_PROJ_1.map"
Deleting file ".\AY1920_II_HW_05_PROJ_1.cycdx"
Deleting file ".\AY1920_II_HW_05_PROJ_1.svd"
Deleting file ".\AY1920_II_HW_05_PROJ_1.rpt"
Deleting file ".\AY1920_II_HW_05_PROJ_1_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\marco\AppData\Local\Cypress Semiconductor\PSoC Creator\4.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\marco\Desktop\AY1920_II_HW_05_SINATRA_MARCO\AY1920_II_HW_05_PROJ_1.cydsn\AY1920_II_HW_05_PROJ_1.cyprj -d CY8C5888LTI-LP097 -s C:\Users\marco\Desktop\AY1920_II_HW_05_SINATRA_MARCO\AY1920_II_HW_05_PROJ_1.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/I2C_Interface.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c I2C_Interface.c -o .\CortexM3\ARM_GCC_541\Debug\I2C_Interface.o
I2C_Interface.c:214:15: error: redefinition of 'I2C_Peripheral_Start'
     ErrorCode I2C_Peripheral_Start(void) 
               ^
I2C_Interface.c:40:15: note: previous definition of 'I2C_Peripheral_Start' was here
     ErrorCode I2C_Peripheral_Start(void) 
               ^
I2C_Interface.c:224:15: error: redefinition of 'I2C_Peripheral_Stop'
     ErrorCode I2C_Peripheral_Stop(void)
               ^
I2C_Interface.c:51:15: note: previous definition of 'I2C_Peripheral_Stop' was here
     ErrorCode I2C_Peripheral_Stop(void)
               ^
I2C_Interface.c:232:15: error: redefinition of 'I2C_Peripheral_ReadRegister'
     ErrorCode I2C_Peripheral_ReadRegister(uint8_t device_address, 
               ^
I2C_Interface.c:61:15: note: previous definition of 'I2C_Peripheral_ReadRegister' was here
     ErrorCode I2C_Peripheral_ReadRegister(uint8_t device_address, 
               ^
I2C_Interface.c:261:15: error: redefinition of 'I2C_Peripheral_ReadRegisterMulti'
     ErrorCode I2C_Peripheral_ReadRegisterMulti(uint8_t device_address,
               ^
I2C_Interface.c:90:15: note: previous definition of 'I2C_Peripheral_ReadRegisterMulti' was here
     ErrorCode I2C_Peripheral_ReadRegisterMulti(uint8_t device_address,
               ^
I2C_Interface.c:299:15: error: redefinition of 'I2C_Peripheral_WriteRegister'
     ErrorCode I2C_Peripheral_WriteRegister(uint8_t device_address,
               ^
I2C_Interface.c:135:15: note: previous definition of 'I2C_Peripheral_WriteRegister' was here
     ErrorCode I2C_Peripheral_WriteRegister(uint8_t device_address,
               ^
I2C_Interface.c:321:15: error: redefinition of 'I2C_Peripheral_WriteRegisterMulti'
     ErrorCode I2C_Peripheral_WriteRegisterMulti(uint8_t device_address,
               ^
I2C_Interface.c:159:15: note: previous definition of 'I2C_Peripheral_WriteRegisterMulti' was here
     ErrorCode I2C_Peripheral_WriteRegisterMulti(uint8_t device_address,
               ^
I2C_Interface.c:358:13: error: redefinition of 'I2C_Peripheral_IsDeviceConnected'
     uint8_t I2C_Peripheral_IsDeviceConnected(uint8_t device_address)
             ^
I2C_Interface.c:194:13: note: previous definition of 'I2C_Peripheral_IsDeviceConnected' was here
     uint8_t I2C_Peripheral_IsDeviceConnected(uint8_t device_address)
             ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 04/23/2020 12:13:50 ---------------
